# finfield

./: .gitignore  README.md  githfield.yml  pyproject.toml  style.css
.github/workflows/: ci.yml
data/: meta.json
data/companies/00/: 000020_KR.json  000030_KR.json  000050_KR.json  000060_KR.json  000070_KR.json  000080_KR.json  000100_KR.json  000120_KR.json  000140_KR.json  000150_KR.json  000180_KR.json  000210_KR.json  000230_KR.json  000240_KR.json  000250_KR.json  000270_KR.json  000360_KR.json  000370_KR.json  000400_KR.json  000480_KR.json  000490_KR.json  000520_KR.json  000610_KR.json  000640_KR.json  000660_KR.json  000670_KR.json  000700_KR.json  000720_KR.json  000800_KR.json  000810_KR.json  000830_KR.json  000880_KR.json  000990_KR.json  001040_KR.json  001060_KR.json  001120_KR.json  001130_KR.json  001200_KR.json  001210_KR.json  001230_KR.json  (+222 more)
data/companies/01/: 01002T_TW.json  010050_KR.json  010060_KR.json  01008T_TW.json  010120_KR.json  010130_KR.json  010140_KR.json  010170_KR.json  010520_KR.json  010600_KR.json  010620_KR.json  010690_KR.json  010780_KR.json  010950_KR.json  011000_KR.json  011040_KR.json  011070_KR.json  011090_KR.json  011160_KR.json  011170_KR.json  011200_KR.json  011210_KR.json  (+82 more)
data/index/: search.json
scripts/: build_universe.py  bulk_publish.py
src/finfield/: __init__.py  build.py  cli.py  knit.py  model.py  publish.py  universe.py
tests/: test_build.py  test_derive.py  test_knit.py  test_model.py  test_publish.py  test_sec_edgar.py  test_universe.py
web/: app.js  company.html  facts_tickers.txt  index.html
(+20338 files in other folders)
